# feedub

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  cli.yml  frontend.yml
backend/: .dockerignore  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 34aacc0e1ac4_add_unique_constraint_on_messages_for_.py  9dbeeab677e0_initial_sqlite_schema.py
backend/scripts/: test_moonshot.py
backend/src/: main.py
backend/src/api/: auth.py  channels.py  health.py  insights.py  messages.py
backend/src/cli/: __init__.py  retention.py
backend/src/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  retry.py  security.py  telegram_formatting.py
backend/src/llm/: __init__.py  prompts.py  provider.py
backend/src/models/: __init__.py  insight.py  message.py  message_fetch.py  user.py  user_channel_favorite.py  user_channel_selection.py  user_insights_usage.py
backend/src/repositories/: channel_favorite_repository.py  channel_selection_repository.py  insights_repository.py  message_fetch_repository.py  message_repository.py  user_repository.py
backend/src/schemas/: auth.py  channel.py  insights.py  message.py
backend/src/services/: auth_service.py  insights_service.py  message_service.py  telegram_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_chats_contract.py  test_health_contract.py  test_insights_contract.py
backend/tests/integration/: conftest.py  test_korean_search.py
backend/tests/unit/: test_config.py  test_database.py  test_exceptions.py  test_insights_repository.py  test_insights_service.py  test_llm_providers.py  test_message_repository.py  test_middleware.py  test_models.py  test_retry.py  test_security.py  test_telegram_fetch_channel_only.py  test_telegram_formatting.py  test_telegram_media_download.py
cli/: README.md  pyproject.toml
cli/feedub/: backup_cmd.py  config.py  config_cmd.py  constants.py  init_cmd.py  logs_cmd.py  main.py  restore_cmd.py  run_cmd.py  status_cmd.py  stop_cmd.py  uninstall_cmd.py  upgrade_cmd.py  utils.py  version_cmd.py
docs/: README.md  environment-variables.md  self-hosting.md
docs/architecture/: README.md  backend-data-flow.md  frontend-data-flow.md  system-overview.md
docs/architecture/decisions/: adr-001-message-export.md  adr-002-channel-filtering.md  adr-004-frontend-compliance.md
docs/qa/: 01-authentication.md  02-channel-selection.md  03-message-fetching.md  04-message-filtering.md  06-export.md  07-cross-cutting.md  README.md
frontend/: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-korean-content.html  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/public/icons/: preview.html
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/contexts/: ToastContext.tsx
frontend/src/hooks/: query-keys.ts  useAuth.ts  useAvailableChannels.ts  useBlockingOperation.test.ts  useBlockingOperation.ts  useCancelFetch.ts  useChannelFavorites.test.ts  useChannelFavorites.ts  useChannelSelections.ts  useChats.ts  useExport.test.ts  useExport.ts  useFetchStatus.ts  useInsightGeneration.ts  useInsightHistory.ts  useInsightsConsent.ts  useInsightsUsage.ts  useLlmEnabled.ts  useMessages.ts  usePagination.ts  useServerFilteredMessages.ts
frontend/src/mocks/: dev-data.ts
frontend/src/pages/: Dashboard.tsx  ErrorPage.tsx  Insights.tsx  Login.test.tsx  Login.tsx  MessageDetail.tsx  NotFound.tsx  Privacy.tsx  Terms.tsx  VerifyCode.tsx
frontend/src/services/: auth-service.ts  feedback-service.ts  insights-service.ts  message-service.ts
frontend/tests/: MANUAL_TESTING_GUIDE.md
(+125 files in other folders)
